--- a/maslenitsa/sass/components/hero.scss
+++ b/maslenitsa/sass/components/hero.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     align-items: flex-start;
-    background-color: #FBFDFA;
+    background-color: #fff;
     border-radius: 10px;
     min-height: calc(100vh - 120px);
     overflow: hidden;
